# HomeHarvest

./: .gitignore  README.md  pyproject.toml  requirements.txt
homeharvest/: __init__.py  cli.py  exceptions.py  utils.py
homeharvest/core/scrapers/: __init__.py  models.py
homeharvest/core/scrapers/realtor/: __init__.py
homeharvest/core/scrapers/zillow/: __init__.py
