[tool.poetry]
name = "homeharvest"
version = "0.3.32"
description = "Real estate scraping library with Zillow/Realtor.com support"
authors = ["Zachary Hampton <zachary@bunsly.com>", "Cullen Watson <cullen@bunsly.com>", "cradcore <cradcore@users.noreply.github.com>"]
homepage = "https://github.com/cradcore/HomeHarvest"
readme = "README.md"

[tool.poetry.scripts]
homeharvest = "homeharvest.cli:main"

[tool.poetry.dependencies]
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
idna = "^3.6"
numpy = "^1.26.4"
pandas = "^2.2.1"
pydantic = "^2.7.4"
python-dateutil = "^2.9.0"
python = ">=3.9,<3.13"
pytz = "^2024.1"
requests = "^2.31.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
